# concert-review-bot

./: .gitignore  .pre-commit-config.yaml.disabled  MIGRATION_GUIDE.md  PR_COMMENTS_SETUP.md  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt  test.py
scripts/: disable_precommit.sh  install_hooks.sh  post_pr_comments.py  review_bot.py
scripts/hooks/: post-commit  pre-push
src/: __init__.py  calculator.py  string_utils.py
tests/: __init__.py  test.py  test2.py  test_calculator.py  test_string_utils.py
webhook_server/: .env.example  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
