[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
extend-ignore = ["E501", "F403", "F405"]

# select:
# E = basic errors
# F = code issues like unused or undefined imports
# W = warnings
# I = import sorting rules
# B = common Python mistakes

# extend-ignore:
# E501 = ignore long line warnings for comments
# F403 = allow "import *" (used for fixtures)
# F405 = allow names that come from "import *"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-sample"
version = "0.1.0"
description = "Sample pytest repository with pre-commit hooks"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.4",
    "pre-commit>=3.6.0",
]